Incluído etapa de testes

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -24,3 +24,12 @@ jobs:
       - name: Compilação
         run: mvn -B package --file pom.xml -DskipTests
 
+      - name: Testes
+        run: mvn test
+
+      - name: Resultados
+        uses: mikepenz/action-junit-report@v4
+        if: success() || failure()
+        with:
+          report_paths: 'target/surefire-reports/TEST-*.xml'
+
