Incluído etapa de deploy

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,3 +33,15 @@ jobs:
         with:
           report_paths: 'target/surefire-reports/TEST-*.xml'
 
+  deploy:
+    needs: ["compilacao-e-teste"]
+    runs-on: ubuntu-latests
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy
+        if: github.ref == 'refs/heads/main'
+        env:
+          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: |
+          curl "$deploy_url"
+
