--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,7 +35,7 @@ jobs:
 
   deploy:
     needs: ["compilacao-e-teste"]
-    runs-on: ubuntu-latests
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Deploy
