--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
+#CONFIGURAÇÃO DE BUILD
 quarkus.package.type=uber-jar
 
-quarkus.datasource.db-kind=h2
-quarkus.datasource.username=username-default
-quarkus.datasource.jdbc.url=jdbc:h2:mem:default
+#CONFIGURAÇÃO DE BANCO
+quarkus.datasource.db-kind=postgres
+quarkus.datasource.username=${DB_USER}
+quarkus.datasource.password=${DB_PASS}
+quarkus.datasource.jdbc.url=jdbc:postgres://${DB_HOST}:5432/publicacaowebdev
 quarkus.datasource.jdbc.max-size=13
+quarkus.hibernate-orm.database.generation=update
 
-quarkus.hibernate-orm.database.generation=drop-and-create
+#CONFIGURAÇÃO DE CORS
+quarkus.http.cors=true
+#quarkus.http.cors.method=*
+quarkus.http.cors.method=GET,POST
+quarkus.http.cors.origins=*
