AJustada conexão com banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,10 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=${DB_USER}
 quarkus.datasource.password=${DB_PASS}
 quarkus.datasource.jdbc.url=jdbc:postgres://${DB_HOST}:5432/publicacaowebdev
-quarkus.datasource.jdbc.max-size=13
 quarkus.hibernate-orm.database.generation=update
 
 #CONFIGURAÇÃO DE CORS
 quarkus.http.cors=true
-#quarkus.http.cors.method=*
-quarkus.http.cors.method=GET,POST
+#quarkus.http.cors.methods=*
+quarkus.http.cors.methods=GET,POST
 quarkus.http.cors.origins=*
