AJustada conexão com banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ quarkus.package.type=uber-jar
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=${DB_USER}
 quarkus.datasource.password=${DB_PASS}
-quarkus.datasource.jdbc.url=jdbc:postgres://${DB_HOST}:5432/publicacaowebdev
+quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST}:5432/publicacaowebdev
 quarkus.hibernate-orm.database.generation=update
 
 #CONFIGURAÇÃO DE CORS
